Add search with initial functionality

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "lint:js": "eslint --ext \".ts,.vue\" --ignore-path .gitignore .",
+    "lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
     "lint:style": "stylelint **/*.{vue,css,scss} --ignore-path .gitignore",
     "lint:prettier": "prettier --check .",
     "lint": "bun run lint:js && bun run lint:style && bun run lint:prettier",
@@ -16,10 +16,14 @@
   },
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@typescript-eslint/parser": "^6.18.0",
+    "@types/pg": "^8.11.4",
+    "@types/xml2js": "^0.4.14",
+    "@typescript-eslint/parser": "^7.3.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-vue": "^9.23.0",
     "fs": "^0.0.1-security",
     "nuxt": "^3.9.0",
     "pg": "^8.11.3",
