--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/pg": "^8.11.4",
     "@types/xml2js": "^0.4.14",
     "@typescript-eslint/parser": "^7.3.1",
+    "csv-parser": "^3.0.0",
+    "dotenv": "^16.4.5",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-nuxt": "^4.0.0",
@@ -29,6 +31,7 @@
     "pg": "^8.11.3",
     "prettier": "^3.1.1",
     "sass": "^1.69.7",
+    "sax": "^1.3.0",
     "typescript": "^5.3.3",
     "vue": "^3.4.5",
     "vue-router": "^4.2.5",
@@ -38,6 +41,7 @@
   "dependencies": {
     "@prisma/cli": "^2.20.1",
     "@prisma/client": "^5.11.0",
+    "axios": "^1.6.8",
     "prisma": "^5.11.0",
     "stylelint": "^16.1.0",
     "stylelint-scss": "^6.0.0"
