--- a/.env-example
+++ b/.env-example
@@ -4,7 +4,11 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://user:user@localhost:5432/db?schema=public"
+DIRECT_DATABASE_URL="postgresql://user:user@localhost:5432/db?schema=public"
+DATABASE_URL="postgresql://user:user@localhost:5432/db?schema=public?pgbouncer=true"
+
+SUPABASE_URL="https://xyzcompany.supabase.co"
+SUPABASE_KEY="public-anon-key"
 
 DB_USER="user"
 DB_PASSWORD="user"
