--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare && prisma generate",
+    "postinstall": "patch-package && nuxt prepare && prisma generate",
     "lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
     "lint:style": "stylelint **/*.{vue,css,scss} --ignore-path .gitignore",
     "lint:prettier": "prettier --check .",
-    "lint": "bun run lint:js && bun run lint:style && bun run lint:prettier",
-    "lintfix": "prettier --write --list-different . && bun run lint:js --fix && bun run lint:style --fix"
+    "lint": "npm run lint:js && npm run lint:style && npm run lint:prettier",
+    "lintfix": "prettier --write --list-different . && npm run lint:js --fix && npm run lint:style --fix"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
@@ -38,11 +38,11 @@
     "xml2js": "^0.6.2"
   },
   "dependencies": {
-    "@prisma/cli": "^2.20.1",
     "@prisma/client": "^5.11.0",
     "@supabase/supabase-js": "^2.42.5",
     "axios": "^1.6.8",
     "csv-parser": "^3.0.0",
+    "patch-package": "^8.0.0",
     "pdf-parse": "^1.1.1",
     "prisma": "^5.11.0",
     "stylelint": "^16.1.0",
