--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "xml2js": "^0.6.2"
   },
   "dependencies": {
+    "@netlify/functions": "^2.6.3",
     "@prisma/client": "^5.11.0",
     "@supabase/supabase-js": "^2.42.5",
     "axios": "^1.6.8",
